# calenderapp

./: .clang-format  CMakeLists.txt
calenderapp/: CMakeLists.txt  compile_commands.json
calenderapp/include/gui/: app.h  app_panel.h  calender.h  main_frame.h  tasklist.h  todo.h
calenderapp/src/: task.cpp
calenderapp/src/gui/: app.cpp  app_panel.cpp  calender.cpp  main_frame.cpp  tasklist.cpp  todo.cpp
include/: constants.h
include/app/: database.h  task.h
include/gui/: main_frame.h  tasklist.h  todo.h
include/gui/widgets/: datetimepicker.h
src/app/: database.cpp  task.cpp
src/gui/: main_frame.cpp  tasklist.cpp  todo.cpp
src/gui/wdigets/: datetimepicker.cpp
